--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,3 +36,12 @@ core-toolbar {
   color: #FAFAFA;
   background-color: #009688;
 }
+
+core-list .row{
+  height:80px;
+  padding:16px;
+}
+.core-list{
+  height:300px;
+  background:orange;
+}
