--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,3 +12,9 @@ body {
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
 }
+paper-material {
+  height: 400px;
+  max-width: 640px;
+  margin: 16px auto;
+  background-color: #fff;
+}
