--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,11 +11,24 @@ body {
     background: #fafafa;
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
-
 }
-paper-material {
+
+section paper-material{
   height: 400px;
   max-width: 640px;
   margin: 16px auto;
   background-color: #fff;
+}
+
+.fabHolder{
+  position:absolute;
+  display:block;
+
+}
+
+paper-fab:not([style-scope]):not(.style-scope) {
+  display: block;
+  margin-bottom: 24px;
+  margin-left: auto;
+  margin-right: auto;
 }
