Both of the front page graphs are finally working. I was missing a few bits of code to get the newer one working. It is not perfect, but I can fix the display issues later.  Now it is time to work on the display of the data and then the entering of the new data. This part is not going to be fun.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -32,3 +32,9 @@ paper-fab:not([style-scope]):not(.style-scope) {
   margin-left: auto;
   margin-right: auto;
 }
+
+.highcharts-container svg{
+  font-family:'Roboto','Helvetica Neue',Helvetica, Arial, sans-serif;
+  height:100%;
+  width:100%;
+}
